Bug 298830 - dolphin sorting order reverted
Summary: dolphin sorting order reverted
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-25 23:47 UTC by
Modified: 2012-04-26 19:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-04-25 23:47:00 UTC
Using dolphin 2 doesnt sort files by Name in descendant order when clicking for the first time.

For example im using "Detaild view mode" and i have files sorted by date in descent order (older files are listed first), if i now click in the "Name" tab, dolphin will list files in ascendant oder, when it should list files in descendant order.
What i mean is that dolphin list files in Z -> A order, when it should  list in A -> Z order when first clicking in the tab "Name".

In dolphin prior to version 2 used to sort files in correct order, why was it changed in version 2?
Also when listing files by date, it list mixing folders with files and with hidden files, but i think i have already reported this in another bug report.

Reproducible: Always

Steps to Reproduce:
Click to for example list files by date and then click to list by "Name" and dolphin list in Z -> A order when it should sort in A -> Z order 
Actual Results:  
When clicking in "Name" tab dolphin first list in Z -> A order

Expected Results:  
dolphin should sort in A -> Z order when clicking in tab "Name"
Comment 1 Peter Penz 2012-04-26 14:54:28 UTC
> For example im using "Detaild view mode" and i have files sorted
> by date in descent order (older files are listed first),

In the descending order (= '^' not 'v') the older files are listed as last (= on the bottom of the list), not as first. So I guess you have enabled the descending order on the date-column and want to have the ascending-order when clicking on the name-column?

I just checked the default Qt-behavior and you are right: When clicking on another column always the ascending order is used - I'll fix this to stay consistent with the Qt-behavior (and old Dolphin-behavior)

I must admit that it took me 15 minutes just to find out what you really mean - please try to be more precise in the "Steps to reproduce" section: You said there "Click to for example list files by date and then click to list by Name"
... this is not correct: It should say "Assure that the the sorting is done by date in descending order, then click on the name-column". E.g. when clicking the date-column it is usually in the ascending order and hence clicking on the name-column will result in A-Z order. I'm sorry for so often nitpicking on your bug-description: You provide generally good bug-reports with issues that other people probably don't even notice, but (at least for me) they are sometimes quite difficult to understand ;-)
Comment 2 Peter Penz 2012-04-26 19:29:53 UTC
Git commit ab7915c8d9b901fd21422203ce770c4329edb2ad by Peter Penz.
Committed on 26/04/2012 at 21:27.
Pushed by ppenz into branch 'master'.

Reset to ascending sort order when changing the column

When changing the sort-column the sort order should always be reset
to 'ascending' to by consistent with the QListView behavior.
FIXED-IN: 4.9.0

M  +6    -1    dolphin/src/kitemviews/private/kitemlistheaderwidget.cpp

http://commits.kde.org/kde-baseapps/ab7915c8d9b901fd21422203ce770c4329edb2ad